Archive/52d3e609be788fa5b793b59b564eb7d1-4c7a93babd200e4d38472bfd414f71ce/output
+ clang++ -std=c++1y -O2 -Wall -pthread main.cpp
main.cpp:16:9: error: use of undeclared identifier 'str'; did you mean 'std'?
        str = "Lala";
        ^~~
        std
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:42:11: note: 'std' declared here
namespace std _GLIBCXX_VISIBILITY(default)
          ^
main.cpp:16:9: error: unexpected namespace name 'std': expected expression
        str = "Lala";
        ^
main.cpp:17:17: error: use of undeclared identifier 'str'
        cout << str << endl;
                ^
3 errors generated.
